force-app/main/default/objects/openq__Event_Settings__c/openq__Event_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Event Settings</label>
</CustomObject>