force-app/main/default/objects/openq__Event_Settings__c/fields/openq__Approvals_Restrictions_Image__c.field-meta.xml
<CustomField>
    <fullName>openq__Approvals_Restrictions_Image__c</fullName>
    <label>Approvals &amp; Restrictions Image</label>
    <length>18</length>
    <type>Text</type>
</CustomField>