force-app/main/default/objects/openq__Event_Settings__c/fields/openq__Dates_Unavailable_Hover_Over_Message__c.field-meta.xml
<CustomField>
    <fullName>openq__Dates_Unavailable_Hover_Over_Message__c</fullName>
    <label>Dates Unavailable Hover Over Message</label>
    <type>TextArea</type>
</CustomField>