force-app/main/default/objects/openq__Event_Settings__c/fields/openq__Enable_Validation_Tab__c.field-meta.xml
<CustomField>
    <fullName>openq__Enable_Validation_Tab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Validation Tab</label>
    <type>Checkbox</type>
</CustomField>