force-app/main/default/objects/openq__Event_Settings__c/fields/openq__Enforce_Projected_Annual_Spend_Cap_Limit__c.field-meta.xml
<CustomField>
    <fullName>openq__Enforce_Projected_Annual_Spend_Cap_Limit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enforce Projected Annual Spend Cap Limit</label>
    <type>Checkbox</type>
</CustomField>