force-app/main/default/objects/openq__Event_Settings__c/fields/openq__Maximum_Number_of_Events_per_Day_Image__c.field-meta.xml
<CustomField>
    <fullName>openq__Maximum_Number_of_Events_per_Day_Image__c</fullName>
    <label>Maximum Number of Events per Day Image</label>
    <length>18</length>
    <type>Text</type>
</CustomField>