force-app/main/default/objects/openq__Event_Settings__c/fields/openq__Projected_Annual_Spend_Cap_Image__c.field-meta.xml
<CustomField>
    <fullName>openq__Projected_Annual_Spend_Cap_Image__c</fullName>
    <label>Projected Annual Spend Cap Image</label>
    <length>18</length>
    <type>Text</type>
</CustomField>